Fixed coordinate issue and playable block computation
Plus some other improvements.

--- a/application.handlebars
+++ b/application.handlebars
@@ -1,5 +1,5 @@
 <p>
-If you don't know how to play the ultimate tic tac toe,
+If you don t know how to play the ultimate tic tac toe,
 <a href="http://mathwithbaddrawings.com/2013/06/16/ultimate-tic-tac-toe/">here are the rules</a> (with some nice drawings ^^)
 </p>
 
@@ -28,18 +28,18 @@ If you don't know how to play the ultimate tic tac toe,
       >
         {{#each br in block.blockRow}}
         <div class="block-row">
-        {{#each br}}
-        <div 
-          {{bindAttr class=":cell isMarked:marked"}}
-          {{action markSquare square}}>
-          {{#if isMarkedByX}}
-            <i class="icon-remove"></i>
-          {{/if}}
-          {{#if isMarkedByO}}
-            <i class="icon-circle-blank"></i>
-          {{/if}}
-        </div>
-        {{/each}}
+          {{#each br}}
+          <div 
+            {{bindAttr class=":cell isMarked:marked"}}
+            {{action markSquare square block}}>
+            {{#if isMarkedByX}}
+              <i class="icon-remove"></i>
+            {{/if}}
+            {{#if isMarkedByO}}
+              <i class="icon-circle-blank"></i>
+            {{/if}}
+          </div>
+          {{/each}}
         </div>
         {{/each}}
       </div>
