--- a/game.css
+++ b/game.css
@@ -1,9 +1,14 @@
-* {
- box-sizing: border-box; 
+a {
+  color: rgb(12, 174, 227);
+  text-decoration: none;
+}
+
+.center {
+  text-align: center;
 }
 
 #application {
-  width: 700px;
+  width: 900px;
   margin: auto;
   margin-bottom: 10%;
   padding: 50px 10px;
@@ -12,11 +17,7 @@
 }
 
 .board {
-  border: 1px solid black;
-  padding: 0;
-  margin: auto;
-  overflow: auto;
-  display: inline-block;
+  padding-left: 1em;
 }
 
 .row {
@@ -102,3 +103,102 @@ i.icon-circle-blank {
   /* border-color: rgb(225,125,125); */
   background-color: rgb(225,125,125);
 }
+
+
+
+
+/* ------------------------------------------- */
+/*              Players list here              */
+/* ------------------------------------------- */
+
+.alert-box {
+  display: block;
+  margin: 10px;
+  padding: 5px;
+  background-color: rgb(42, 166, 203);
+  border: 1px solid rgb(34, 132, 161);
+  color: white;
+  font-weight: bold;
+}
+
+.players-list li {
+  list-style-type: none;
+  width: 100%;
+  display: block;
+  padding: 3px 1em;
+
+  transition: background-color 0.5s ease;
+}
+
+/* .players-list li:hover { */
+/*   background-color: #ddd; */
+/* } */
+
+.control-group {
+  position: relative;
+  display: inline-block;
+}
+
+input {
+  border: 2px solid #bdc3c7;
+  border-color: #bdc3c7;
+  /* border-color: rgb(41, 158, 193); */
+  box-shadow: none;
+  border-radius: 6px;
+  background-color: white;
+  padding: 2px .5em;
+}
+
+input:focus {
+  border: 2px solid rgb(67, 184, 219);
+  outline: none;
+}
+
+.control-group .input-icon {
+  position: absolute;
+  right: -2px;
+  top: 2px;
+  padding: 0 10px;
+  line-height: 1.3em;
+  color: #bdc3c7;
+  visibility: hidden;
+}
+
+.control-group input:focus + .input-icon {
+  color: rgb(41, 158, 193);
+  visibility: visible;
+}
+
+.status {
+  padding: 5px;
+}
+
+.status.idle {
+  color: #3c3;
+}
+
+.button {
+  background-color: rgb(41, 158, 193);
+  color: white;
+  border: 1px solid rgb(41, 158, 193);
+  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.5);
+  display: inline-block;
+  padding: 2px .5em;
+
+  transition: all .7s;
+}
+
+.button:hover {
+  background-color: rgb(34, 132, 161);
+}
+
+.button-secondary {
+  color: rgb(51, 51, 51);
+  background-color: rgb(233, 233, 233);
+  border: 1px solid rgb(208, 208, 208);
+}
+
+.button-secondary:hover {
+  background-color: rgb(208,208,208);
+}
+
