--- a/application.handlebars
+++ b/application.handlebars
@@ -1,14 +1,7 @@
 <div class="col-1-1">
-  <p>
-  If you don t know how to play the ultimate tic tac toe,
-  <a href="http://mathwithbaddrawings.com/2013/06/16/ultimate-tic-tac-toe/">here are the rules</a> (with some nice drawings ^^)
-  </p>
+  {{#linkTo "index"}}
+  Ultimate Tic Tac Toe online.
+  {{/linkTo}}
 </div>
 
-<div class="col-1-2">
-  {{ template "game" }}
-</div>
-<div class="col-1-2 lobby">
-  {{ render "lobby" }}
-</div>
-
+{{outlet}}
