--- a/game.css
+++ b/game.css
@@ -154,6 +154,10 @@ input:focus {
   outline: none;
 }
 
+input.invalid {
+  border: 2px solid rgb(230, 15, 15);
+}
+
 .control-group .input-icon {
   position: absolute;
   right: -2px;
