Two players can play togethers
Victory case not handled.
No way to resign/cancel the game and go back to the lobby.
Chatroom should be disabled while in game (?).
Need massive graphic improvements.

--- a/game.css
+++ b/game.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+  
 a {
   color: rgb(12, 174, 227);
   text-decoration: none;
@@ -139,7 +143,7 @@ i.icon-circle-blank {
   display: inline-block;
 }
 
-input {
+input:not([type="submit"]) {
   border: 2px solid #bdc3c7;
   border-color: #bdc3c7;
   /* border-color: rgb(41, 158, 193); */
@@ -156,6 +160,10 @@ input:focus {
 
 input.invalid {
   border: 2px solid rgb(230, 15, 15);
+}
+
+input.valid {
+  border: 2px solid rgb(15, 230, 15);
 }
 
 .control-group .input-icon {
@@ -198,6 +206,7 @@ input.invalid {
 
 .button:hover {
   background-color: rgb(34, 132, 161);
+  cursor: pointer;
 }
 
 .button-secondary {
@@ -210,3 +219,17 @@ input.invalid {
   background-color: rgb(208,208,208);
 }
 
+.chatroom {
+  height: 200px;
+  border: 1px solid black;
+  margin: 20px;
+  overflow: auto;
+  position: relative;
+}
+
+.chatroom ul {
+  list-style: none;
+  padding-left: 1em;
+  /* position: absolute; */
+  /* bottom: 0; */
+}
