--- a/hotseat.handlebars
+++ b/hotseat.handlebars
@@ -18,32 +18,6 @@
 
   </div>
 
-  <div class="board">
-    {{#each row in domBoard}}
-    <div class="row">
-      {{#each block in row}}
-      <div {{ bindAttr class=":block block.isPlayable:playable block.isWonByO:won-o block.isWonByX:won-x" }} 
-        >
-          {{#each br in block.blockRow}}
-          <div class="block-row">
-            {{#each br}}
-            <div 
-              {{bindAttr class=":cell isMarked:marked"}}
-              {{action markSquare square block}}>
-              {{#if isMarkedByX}}
-                <i class="icon-remove"></i>
-              {{/if}}
-              {{#if isMarkedByO}}
-                <i class="icon-circle-blank"></i>
-              {{/if}}
-            </div>
-            {{/each}}
-          </div>
-          {{/each}}
-        </div>
-      {{/each}}
-    </div>
-    {{/each}}
-  </div>
+  {{ render game }}
 
 </div>
