--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-<div class="col-1-1">
+<div>
   {{#linkTo "index"}}
   Ultimate Tic Tac Toe online.
   {{/linkTo}}
 </div>
 
-{{outlet}}
+<div class="row">
+  {{outlet}}
+</div>
