--- a/app/templates/lobby.hbs
+++ b/app/templates/lobby.hbs
@@ -1,25 +1,32 @@
 Welcome: {{ currentPlayer.name }}
 
 {{#if currentPlayer.isChallenged}}
-<div class="alert-box">
-  You ve been challenged by {{ currentPlayer.opponent.name }}!
-</div>
-<div class="center">
-  <a href="javascript://" class="button" {{ action acceptChallenge }}> Accept </a>
-  <a href="javascript://" class="button button-secondary" {{ action declineChallenge }}>
-    Decline
-  </a>
+<div class="panel">
+  <h5>You ve been challenged by {{ currentPlayer.opponent.name }}!</h5>
+  <ul class="button-group">
+    <li>
+    <a href="javascript://" class="small button" {{ action acceptChallenge }}> Accept </a>
+    </li>
+    <li>
+    <a href="javascript://" class="small button button-secondary" {{ action declineChallenge }}>
+      Decline
+    </a>
+    </li>
+  </ul>
 </div>
 {{/if}}
+
 <ul class="players-list">
   {{#each player in otherPlayers}}
-  <li>
+  <li {{ bindAttr class="player.isInGame:inGame" }}
+  {{ bindAttr title="player.isInGame" }}
+  >
   {{#if player.isIdle}}
-  <i class="icon-circle state idle" title="Idle" ></i>
+  <i class="icon-comment-alt state idle" title="Idle" ></i>
   {{/if}}
 
   {{#if player.isInGame}}
-    <i class="icon-circle state inGame" title="In game"></i>
+    <i class="icon-gamepad state inGame" title="In game"></i>
   {{/if}}
 
   {{#if player.isChallenged}}
@@ -33,11 +40,11 @@ Welcome: {{ currentPlayer.name }}
   {{ player.name }}
 
   {{#if player.canBeChallenged}}
-  <a href="javascript://" class="button" {{ action challenges player }}>Play against</a>
+  <a href="javascript://" class="tiny button" {{ action challenges player }}>Play against</a>
   {{/if}}
 
   {{#if player.isChallenged}}
-  <a href="javascript://" class="button" {{ action cancelChallenge }}>Cancel</a>
+  <a href="javascript://" class="tiny button" {{ action cancelChallenge }}>Cancel</a>
   {{/if}}
 
   {{#if player.isWaiting}}
