--- a/app/templates/multiplayer.hbs
+++ b/app/templates/multiplayer.hbs
@@ -1,32 +1,34 @@
-<div class="col-1-1">
-  <p>
-  If you don t know how to play the ultimate tic tac toe,
-  <a href="http://mathwithbaddrawings.com/2013/06/16/ultimate-tic-tac-toe/">here are the rules</a> (with some nice drawings ^^)
-  </p>
-</div>
 
-{{#if currentPlayer.isInGame }}
-  <div class="col-1-2">
-    You re playing as {{ view App.IconSymbolView symbolBinding=currentPlayer.symbol }}
-    <br />
+<div class="row">
+  {{#if currentPlayer.isInGame }}
+  <div class="small-6 columns">
+    <h4>
+      You re playing as {{ view App.IconSymbolView symbolBinding=currentPlayer.symbol }}
+    </h4>
     {{#if currentPlayer.isActive}}
-      Your turn to play
+    <h5>Your turn to play !</h5>
     {{else}}
+    <h5 class="subheader">
       <i class="icon-spin icon-spinner"></i> wait for opponent move...
+    </h5>
     {{/if}}
+    <div {{ bindAttr class="currentPlayer.isActive::inactive" }}>
     {{ render "game" }}
+    </div>
   </div>
-  <div class="col-1-2">
-    {{ render "surrender" }}
+  <div class="small-6 columns">
     {{ render "gameChatroom" }}
+    {{ render "surrender" }}
   </div>
-{{else}}
-  <div class="col-1-2">
+  {{else}}
+  <div class="small-6 columns">
     {{ template "lobby" }}
   </div>
-  <div class="col-1-2">
+  <div class="small-6 columns">
     {{ render "chatroom" }}
   </div>
-{{/if}}
+  {{/if}}
+
+</div>
 
 
