--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  padding-bottom: 125px; //height of the footer
+  padding-bottom: 150px; //height of the footer plus some space
 }
 
 .header {
@@ -23,7 +23,6 @@ footer {
   height: 125px;
   background-color: #18191b;
   width: 100%;
-  margin-top: 20px;
   padding-top: 10px;
   text-align: center;
   position: absolute;
