--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,36 +1,45 @@
-body {
-  //to put the footer at the very bottom
+/* html, body, .container { height: 100%; } */
+
+/* body > .container { height: auto; min-height: 100%; } */
+html, body {
+  height: 100%;
+}
+
+#application {
   min-height: 100%;
+  position: relative;
 }
 
 .container {
-  padding-bottom: 150px; //height of the footer plus some space
+  padding-bottom: emCalc(120px); //height of the footer plus some space
 }
 
 .header {
   width: 100%;
   padding: 2em;
-  padding-left: 20%;
-  /* background-color: hsl(200, 40, 95); */
   background-color: rgb(232,248,255);
   background-image: url("../images/ttt0.png");
   background-repeat: no-repeat;
-  background-position: 70%;
+  background-position: 90%;
   height: 200px;
 }
 
+.header h1 {
+  width: 70%;
+}
+
 footer {
-  height: 125px;
+  height: emCalc(100px);
   background-color: #18191b;
   width: 100%;
-  padding-top: 10px;
+  padding: 0 10px;
   text-align: center;
   position: absolute;
   bottom: 0;
 }
 
 footer a, h3 {
-  display: inline-block;
+  display: block;
   color: #aaa;
   transition: color .8s;
 
@@ -38,7 +47,3 @@ footer a, h3 {
     color: white;
   }
 }
-
-// footer a h3 {
-//   color: white;
-// }
