--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,15 +1,15 @@
-<div class="header">
-  <div class="title">
-    <h1>
-      {{#linkTo "index"}}
-      Ultimate Tic Tac Toe online
-      {{/linkTo}}
-      <div class="header-cloud">
-    </h1>
+<div class="all-but-footer">
+  <div class="header">
+    <div class="title">
+      <h1>
+        {{#linkTo "index"}}
+        Ultimate Tic Tac Toe online
+        {{/linkTo}}
+      </h1>
+      <div class="header-cloud"></div>
+    </div>
   </div>
-</div>
 
-<div class="container">
   {{outlet}}
 </div>
 
